# automation-agent

./: .env.example  .gitignore  main.py  pyproject.toml  system.md
deployment/: Dockerfile.dashboard  Dockerfile.mcp-server  Dockerfile.registry  Dockerfile.router  docker-compose.yml  replit-deployment.md
src/: cli.py  mcp_server.py  router.py  self_healing.py  web_dashboard.py  workflow_registry.py
src/domain_tools/: __init__.py  jira_tool.py
workflows/: jira_ticket_export.yaml  test_navigation.yaml
